--- a/CSS_Dictionary/CSS_Dictionary.html
+++ b/CSS_Dictionary/CSS_Dictionary.html
@@ -15,12 +15,11 @@
     <input type="text" id="search" onkeyup="Function()" placeholder="Search anything!" title="Type in a name">
 
     <ul id="">
-        <li><button id=""></button></li>
-        <li><button id=""></button></li>
-        <li><button id=""></button></li>
-        <li><button id=""></button></li>
-        <li><button id=""></button></li>
-        <li><button id=""></button></li>
-        <li><button id=""></button></li>
+        <li><button id="">a</button></li>
+        <li><button id="">b</button></li>
+        <li><button id="">c</button></li>
+        <li><button id="">d</button></li>
+        <li><button id="">e</button></li>
+        <li><button id="">f</button></li>
     </ul>
 </body>
