--- a/HIPHOP_PLAYLIST/hiphop_playlist.html
+++ b/HIPHOP_PLAYLIST/hiphop_playlist.html
@@ -5,43 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="hiphop_playlist.css">
     <script src="hiphop_playlist.js"></script>
+
     <link rel="shortcut icon" type="image/x-icon" href="titleimg.ico">
     <title>HIPHOP_PLAYLIST</title>
 </head>
 
 <body>
-    <h1>HIPHOP_PLAYLIST</h1>
-    <div class="container">
+    <h1>HIPHOP PLAYLIST</h1>
         <div class="contents1">
-            <img src="1.next_episode.jpg">
-            <img src="2.what's_up_danger.jpg">
-            <img src="3.wirte_this_down.jpg">
-            <img src="4.stan.jpg">
+            <button ><img src="1.next_episode.jpg" ></button>
+            <button><img src="2.what's_up_danger.jpg"></button>
+            <button><img src="3.wirte_this_down.jpg"></button>
+            <button><img src="4.stan.jpg"></button>
         </div>
 
         <div class="contents2">
-            <img src="5.nuthin'but_A_G_thang.jpg">
-            <img src="6.knife_talk.jpg">
-            <img src="7.this_is_america.jpg">
-            <img src="8.rocster.jpg">
+            <button><img src="5.who_am_i.jpg"></button>
+            <button><img src="6.knife_talk.jpg"></button>
+            <button><img src="7.this_is_america.jpg"></button>
+            <button><img src="8.rocster.jpg"></button>
         </div>
 
         <div class="contents3">
-            <img src="9.한강gang_megamix.jpg">
-            <img src="10.@ferari.jpg">
-            <img src="11.code_clear.jpg">
-            <img src="12.humble.jpg">
+            <button><img src="9.laugh_now_cry_later.jpg"></button>
+            <button><img src="10.code_clear.jpg"></button>
+            <button><img src="11.N95.jpg"></button>
+            <button><img src="12.humble.jpg"></button>
         </div>
 
         <div class="contents4">
-            <img src="13.die_for_you.jpg">
-            <img src="14.'till_i_collapse.jpg">
-            <img src="15.godzilla.jpg">
-            <img src="16.without_me.jpg">
+            <button><img src="13.die_for_you.jpg"></button>
+            <button><img src="14.'till_i_collapse.jpg"></button>
+            <button><img src="15.godzilla.jpg"></button>
+            <button><img src="16.without_me.jpg"></button>
         </div>
-    </div>
 </body>
 
 </html>
